--- a/src/app/core/logo-user-company/logo-user-company.component.sass
+++ b/src/app/core/logo-user-company/logo-user-company.component.sass
@@ -30,6 +30,7 @@
     height: 47px
     border-radius: 50%
     background: url('../../../assets/image/profile-1.jpg')
+    background-size: 100%
     margin-right: 20px
 
   .profile__content
