--- a/src/app/core/page/page.component.html
+++ b/src/app/core/page/page.component.html
@@ -1,7 +1,11 @@
 <mat-drawer-container class="container">
   <mat-drawer mode="side" opened>
-    <app-logo-user-company></app-logo-user-company>
-    <app-menu></app-menu>
+    <app-logo-user-company
+      [currentUser]="currentUser"
+      [firstCompany]="firstCompany"
+      (onChanged)="onChanged($event)"
+    ></app-logo-user-company>
+    <app-menu [currentUser]="currentUser"></app-menu>
   </mat-drawer>
 
   <mat-drawer-content>
