--- a/src/app/myTest/my.component.html
+++ b/src/app/myTest/my.component.html
@@ -1,3 +1,5 @@
-<h1>Hello</h1>
-<button (click)="onSave()">Register user</button>
-<button (click)="onGet()">Get user</button>
+<h1>Test</h1>
+<button (click)="onSave()">Register a new user</button>
+<button (click)="onGet()">Get a user</button>
+<br />
+<button (click)="directHome()">Go ahead!</button>
