--- a/src/app/profile-page/profile.component.html
+++ b/src/app/profile-page/profile.component.html
@@ -1,13 +1,16 @@
 <div class="profile-container">
   <app-container class="profile__info">
-    <app-profile-info [user]="User"></app-profile-info>
+    <app-profile-info
+      [user]="User"
+      [currentUser]="currentUser"
+    ></app-profile-info>
   </app-container>
 
-  <app-container *ngIf="User.registered" class="profile__bar-chart">
+  <app-container *ngIf="currentUser.registered" class="profile__bar-chart">
     <app-bar-chart></app-bar-chart>
   </app-container>
 
-  <app-container *ngIf="User.registered" class="profile__pending">
+  <app-container *ngIf="currentUser.registered" class="profile__pending">
     <!-- <div class="inline">
         <app-table [tableData]="tableData" (onRemove)="removeItem($event)"></app-table>
         <div class="donut_chart">
@@ -17,13 +20,13 @@
   </app-container>
 
   <app-container
-    *ngIf="User.registered"
+    *ngIf="currentUser.registered"
     class="profile__notification-preferences"
   >
     <app-notification-preferences></app-notification-preferences>
   </app-container>
 
-  <div *ngIf="!User.registered" class="profile__first-login">
+  <div *ngIf="!currentUser.registered" class="profile__first-login">
     <app-container class="profile__send-email">
       <app-send-email></app-send-email>
     </app-container>
