--- a/src/app/core/logo-user-company/logo-user-company.component.html
+++ b/src/app/core/logo-user-company/logo-user-company.component.html
@@ -5,17 +5,34 @@
   <h1 class="logo__name">Mifort Timesheet</h1>
 </div>
 <div class="profile">
-  <div class="profile__photo"></div>
+  <div
+    class="profile__photo"
+    [ngStyle]="{
+      background: 'url(' + currentUser.avatar + ') no-repeat ',
+      'background-size': '100%'
+    }"
+  ></div>
   <div class="profile__content">
-    <h2 class="profile__name">{{ name }}</h2>
+    <h2 class="profile__name">{{ currentUser.name }}</h2>
     <div class="profile__selector">
-      <button mat-button [ngClass]="{ hide: isHide() }" color="primary">
+      <button
+        mat-button
+        [ngClass]="{ hide: !isHide() }"
+        color="primary"
+        (click)="onKlick()"
+      >
         + Create company
       </button>
-      <mat-form-field [ngClass]="{ hide: !isHide() }">
+      <mat-form-field [ngClass]="{ hide: isHide() }">
         <mat-label>Select company</mat-label>
-        <mat-select [(value)]="selected">
-          <mat-option *ngFor="let company of companyList" [value]="company">
+        <mat-select
+          [(ngModel)]="selectedCompany"
+          (ngModelChange)="onChange($event)"
+        >
+          <mat-option
+            *ngFor="let company of currentUser.companyList"
+            [value]="company"
+          >
             {{ company }}
           </mat-option>
         </mat-select>
