--- a/src/app/core/menu/menu.component.sass
+++ b/src/app/core/menu/menu.component.sass
@@ -29,3 +29,7 @@ a:hover
 .company-link
   border-bottom: 1px solid #EBEFF2
   padding: 20px 20px
+
+
+.lineThrough
+  text-decoration: line-through
