--- a/src/app/company-settings/company-properties/company-properties.component.sass
+++ b/src/app/company-settings/company-properties/company-properties.component.sass
@@ -42,6 +42,7 @@
   .company-properties__body
     display: flex
     flex-direction: row
+    justify-content: flex-start
     font-family: Poppins
     font-style: normal
     font-weight: normal
