--- a/src/app/profile-page/profile-info/profile-info.component.sass
+++ b/src/app/profile-page/profile-info/profile-info.component.sass
@@ -30,7 +30,7 @@
   .profile-info__projects
     // flex-grow: 10
     h3
-      margin: 0 0
+      margin: 0 25px
       font-family: Poppins
       font-style: normal
       font-weight: 500
