--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700|Material+Icons')
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap')
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap')
-@import "~@angular/material/prebuilt-themes/indigo-pink.css"
+@import "./materialStyle.css"
 
 /* Styles for snackbar */
 .error
@@ -18,3 +18,8 @@
   opacity: .8
   button
     color: white
+
+.mat-form-field-appearance-legacy .mat-form-field-infix
+  padding: 0 0
+
+
