--- a/src/app/company-settings/company-properties/company-properties.component.sass
+++ b/src/app/company-settings/company-properties/company-properties.component.sass
@@ -1,29 +1,11 @@
-::ng-deep .mat-checkbox:not(.mat-checkbox-disabled).mat-accent .mat-checkbox-ripple .mat-ripple-element
-  background-color: #109CF1
-
-::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background
-  background-color: #109CF1
-
-::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle
-  background-color: #109CF1
-::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle
-  border-color: #109CF1
-
-::ng-deep .mat-radio-button:not(.mat-radio-disabled).mat-accent .mat-radio-ripple .mat-ripple-element
-  background-color: #109CF1
-
 .mat-raised-button.mat-primary
   width: 58px
   height: 24px
-  background-color: #109CF1
-  font-family: Poppins
-  font-style: normal
   font-weight: 500
   font-size: 13px
   line-height: 19px
   text-align: center
   letter-spacing: 0.02em
-  box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24)
   border-radius: 4px
 
 .company-properties
@@ -33,8 +15,6 @@
     display: flex
     justify-content: space-between
     input
-      font-family: Poppins
-      font-style: normal
       font-weight: normal
       font-size: 24px
       line-height: 36px
@@ -43,8 +23,6 @@
     display: flex
     flex-direction: row
     justify-content: flex-start
-    font-family: Poppins
-    font-style: normal
     font-weight: normal
     font-size: 12px
     line-height: 18px
@@ -79,4 +57,28 @@
 .time-measure-width
   width: 50px
 
+
+.mat-select
+  font-weight: 500
+  font-size: 11px
+  line-height: 16px
+  letter-spacing: 0.01em
+  color: #323C47
+
+.mat-option-text, .mat-form-field
+  font-weight: 500
+  font-size: 12px
+  line-height: 24px
+  color: #6A707E
+
+.mat-button
+  padding: 0
+  font-weight: 500
+  font-size: 11px
+  line-height: 16px
+  letter-spacing: 0.01em
+  color: #109CF1
+
+.mat-checkbox-layout .mat-checkbox-label, .mat-checkbox
+  line-height: 24px
 
