--- a/src/app/company-settings/company-settings.component.html
+++ b/src/app/company-settings/company-settings.component.html
@@ -8,16 +8,17 @@
 
   <app-container class="approval-card">
     <mat-card-title>Approval Period:</mat-card-title>
-    <app-approval-period></app-approval-period>
+    <app-approval-period [company]="Company"></app-approval-period>
   </app-container>
 
   <div class="last-row">
     <app-container class="comments-card">
       <mat-card-title>Comments:</mat-card-title>
+      <app-comments></app-comments>
     </app-container>
 
     <app-container class="integration-card">
-      <mat-card-title>Connected Integrations:</mat-card-title>
+      <app-company-integration [user]="user"></app-company-integration>
     </app-container>
   </div>
 </div>
