ref: add ref to DatepickerComponent.

--- a/src/app/timelogs/header-timelogs/header-timelogs.component.html
+++ b/src/app/timelogs/header-timelogs/header-timelogs.component.html
@@ -7,6 +7,6 @@
     <button routerLink="/timelog-week">Week</button>
   </div>
   <div>
-<!--    <button class="button-save">Save</button>-->
+    <button class="button-save" (click)="save()">Save</button>
   </div>
 </div>
