--- a/src/app/timelogs/timelog-day/timelog-day.component.html
+++ b/src/app/timelogs/timelog-day/timelog-day.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <app-header-timelogs></app-header-timelogs>
-  <div class="table">
-    <table mat-table [dataSource]="dataSource">
 
+  <div class="table">
+    <table mat-table [dataSource]="timesheets">
       <ng-container matColumnDef="project">
         <th mat-header-cell *matHeaderCellDef> Project </th>
         <td mat-cell *matCellDef="let timesheet; let i = index">
-          <app-timelog-select [timesheets]="data.timesheets[i]" [projects]="data.projects"></app-timelog-select>
+          <app-timelog-select [timesheets]="timesheets[i]" [projects]="projects"></app-timelog-select>
         </td>
         <td mat-footer-cell *matFooterCellDef> Total </td>
       </ng-container>
@@ -19,7 +19,8 @@
 
       <ng-container matColumnDef="comment">
         <th mat-header-cell *matHeaderCellDef> Comment </th>
-        <td mat-cell *matCellDef="let timesheet; let i = index"><div class="comment-field">{{timesheet.comment}}
+        <td mat-cell *matCellDef="let timesheet; let i = index"><div class="comment-field">
+          <span>{{timesheet.comment}}</span>
           <button mat-icon-button (click)="deleteTimesheet(i)">
             <mat-icon class="mat-18">close</mat-icon>
           </button>
@@ -34,13 +35,13 @@
             <mat-label>
               <div class="round"></div>&nbsp;&nbsp;<span>Choose Project</span>
             </mat-label>
-            <mat-select formControlName="project" (valueChange)="log()" [(value)]="project">
-              <mat-select-trigger *ngIf="project" class="project">
-                <mat-icon class="mat-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
+            <mat-select formControlName="project" [(value)]="project">
+              <mat-select-trigger *ngIf="project" class="mark">
+                <mat-icon class="md-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
                 <span>{{project.name}}</span>
               </mat-select-trigger>
-              <mat-option *ngFor="let project of data.projects" [value]="project">
-                <mat-icon class="mat-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
+              <mat-option *ngFor="let project of projects" [value]="project">
+                <mat-icon class="md-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
                 <span>{{project.name}}</span>
               </mat-option>
             </mat-select>
@@ -50,13 +51,13 @@
 
       <ng-container matColumnDef="time-description">
         <td class="bottom-border-none" [formGroup]="timesheetForm" mat-footer-cell *matFooterCellDef>
-          <input formControlName="time" (ngModelChange)="log()" matInput>
+          <input formControlName="time" matInput placeholder="0.0">
         </td>
       </ng-container>
 
       <ng-container matColumnDef="comment-description">
         <td class="bottom-border-none" [formGroup]="timesheetForm" mat-footer-cell *matFooterCellDef>
-          <input formControlName="comment" (ngModelChange)="log()" matInput placeholder="Comment">
+          <input formControlName="comment" matInput placeholder="Comment">
         </td>
       </ng-container>
 
@@ -68,6 +69,7 @@
       <tr mat-footer-row *matFooterRowDef="displayedColumns;"></tr>
     </table>
   </div>
+  <button (click)="test()">Save</button>
 </div>
 
 
