--- a/src/app/timelogs/timelog-day/timelog-day.component.sass
+++ b/src/app/timelogs/timelog-day/timelog-day.component.sass
@@ -3,6 +3,9 @@
   flex-direction: column
   align-items: center
 
+.material-icons.md-24
+  font-size: 24px
+
 .table
   width: 744px
   padding: 20px
