ref: add OnPush in decotrator and fix some mistakes.

--- a/src/app/timelogs/timelog-select/timelog-select.component.html
+++ b/src/app/timelogs/timelog-select/timelog-select.component.html
@@ -4,11 +4,11 @@
   </mat-label>
   <mat-select [(value)]="project">
     <mat-select-trigger *ngIf="project" class="project">
-      <mat-icon class="mat-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
+      <mat-icon class="md-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
       <span>{{project.name}}</span>
     </mat-select-trigger>
     <mat-option *ngFor="let project of projects" [value]="project">
-      <mat-icon class="mat-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
+      <mat-icon class="md-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
       <span>{{project.name}}</span>
     </mat-option>
   </mat-select>
