--- a/src/app/myTest/my.component.html
+++ b/src/app/myTest/my.component.html
@@ -3,3 +3,9 @@
 <button (click)="onGet()">Get a user</button>
 <br />
 <button (click)="directHome()">Go ahead!</button>
+<!--
+<ul>
+  <li *ngFor="let item of books | async">
+    <pre>{{ item | json }}</pre>
+  </li>
+</ul> -->
