--- a/src/app/employees/employees.component.sass
+++ b/src/app/employees/employees.component.sass
@@ -1,66 +1,29 @@
-// .employees-header
-//   margin: 0 10px
-//   display: flex
-//   color: #6A707E
+.employees-container
+  .employees-container__header
+    display: flex
+    justify-content: space-between
 
-//   button
-//     font-family: 'Poppins', sans-serif
-//     font-style: normal
-//     font-weight: 500
-//     font-size: 11px
-//     line-height: normal
-//     text-align: center
-//     color: #6A707E
-//     border: 1px solid #109CF1
-//     border-radius: 1px
-//     padding: 3px 20px
-//     background: none
-//   button:hover
-//     color: #ffffff
-//     background: #109CF1
-//   input, select
-//     background: none
-//     border: none
-//     border-bottom: 1px solid #6A707E
-//     margin-right: 10px
-
-//   .invite
-//     margin-left: auto
-//     span
-//       margin-right: 10px
-
-
-// table
-//   background: none
-//   width: 100%
-//   box-shadow: none
-// .mat-form-field
-//   font-size: 14px
-//   width: 100%
+    .employees-container__mail-sender
+      display: flex
+      font-family: Poppins
+      font-style: normal
+      font-weight: normal
+      font-size: 12px
+      line-height: 18px
+      letter-spacing: 0.01em
 
 
 
-// .circle
-//   border-radius: 50%
-//   width: 20px
-//   height: 20px
-//   cursor: pointer
 
-// .circle_employees
-//   margin-left: -5px
-// .information_about_employee
-//   position: absolute
-//   width: 210px
-//   height: 100px
-//   background: #FFFFFF
-//   border-radius: 15px
-//   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2)
 
-// a
 
-//   text-decoration-line: underline
-//   color: #109CF1
-// h3, p, a
-//   margin-left: 10px
-// .inline
-//   display: flex
+.mat-raised-button.mat-primary
+  width: 58px
+  height: 24px
+  font-weight: 500
+  font-size: 13px
+  line-height: 19px
+  text-align: center
+  letter-spacing: 0.02em
+  border-radius: 4px
+
