feat: add project pages

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,8 @@
-<p>projects works!</p>
+<div class="projects-container">
+  <app-container class="projects-header">
+    <app-projects-header></app-projects-header>
+  </app-container>
+  <app-container class="projects-list">
+    <app-projects-list></app-projects-list>
+  </app-container>
+</div>
