--- a/src/app/projects/projects-list/projects-list.component.html
+++ b/src/app/projects/projects-list/projects-list.component.html
@@ -4,46 +4,46 @@
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort>
+      <mat-table [dataSource]="dataSource" matSort>
         <ng-container matColumnDef="color">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
-          <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
+          <td mat-cell *matCellDef="let element" [style.color]="element.color"> {{element.color}} </td>
         </ng-container>
-        <ng-container matColumnDef="project">
+        <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
-          <td mat-cell *matCellDef="let row"> {{row.project}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-          <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+        <ng-container matColumnDef="code">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
+          <td mat-cell *matCellDef="let element"> {{element.code}} </td>
         </ng-container>
         <ng-container matColumnDef="team">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Team </th>
-          <td mat-cell *matCellDef="let row"> {{row.team}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.team}} </td>
         </ng-container>
         <ng-container matColumnDef="start">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-          <td mat-cell *matCellDef="let row"> {{row.start}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
         </ng-container>
         <ng-container matColumnDef="progress">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-          <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+          <td mat-cell *matCellDef="let element"> {{element.progress}}% </td>
         </ng-container>
         <ng-container matColumnDef="end">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
-          <td mat-cell *matCellDef="let row"> {{row.end}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
         </ng-container>
         <ng-container matColumnDef="play">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Play </th>
-          <td mat-cell *matCellDef="let row"> {{row.play}} </td>
+          <td mat-cell *matCellDef="let element"> {{element}} </td>
         </ng-container>
         <ng-container matColumnDef="stop">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Stop </th>
-          <td mat-cell *matCellDef="let row"> {{row.stop}} </td>
+          <td mat-cell *matCellDef="let element"> {{element}} </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+      </mat-table>
     </div>
   </mat-card>
 </div>
