feat: add bar chart

--- a/src/app/core/page/page.component.sass
+++ b/src/app/core/page/page.component.sass
@@ -9,6 +9,7 @@
     width: 256px
     background: #FFFFFF
     box-shadow: 6px 0px 18px rgba(0, 0, 0, 0.06)
+    z-index: 1
 
   mat-drawer-content
     background: #F5F6F8
