--- a/src/app/employees/employees-page/employees-page.component.html
+++ b/src/app/employees/employees-page/employees-page.component.html
@@ -1,1 +1,1 @@
-<app-table [tableData]="data" [tableColumn]='column'></app-table>
+<app-table [tableData]="data" [tableColumn]='column' [filter]='filter'></app-table>
