--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -1,31 +1,33 @@
-<div
-  *ngIf="currentUser.role == 'Owner' && currentUser.registered == true"
-  class="menu-link company-link"
-  routerLinkActive="active"
->
+<div *ngIf="currentUser.role === 'Owner' && currentUser.registered == true" class="menu-link company-link"
+  routerLinkActive="active">
   <a routerLink="/company-settings">
     <i class="material-icons-round">business</i>
     <span>Company settings</span>
   </a>
 </div>
+
 <div class="menu-link" routerLinkActive="active">
   <a routerLink="/profile">
     <i class="material-icons-round">perm_identity</i>
     <span>Profile</span>
   </a>
 </div>
-<div *ngIf="currentUser.registered" class="menu-link" routerLinkActive="active">
+
+<div *ngIf="currentUser.role === 'Owner' || currentUser.role === 'Project Manager' || currentUser.role === 'HR Manager'"
+  class="menu-link" routerLinkActive="active">
   <a routerLink="/projects">
     <i class="material-icons-round">work_outline</i>
-    <span class="lineThrough">Projects</span>
+    <span>Projects</span>
   </a>
 </div>
-<div *ngIf="currentUser.registered" class="menu-link" routerLinkActive="active">
+
+<div *ngIf="currentUser.registered && currentUser.role !== 'Employee'" class="menu-link" routerLinkActive="active">
   <a routerLink="/employees" routerLinkActive="active">
     <i class="material-icons-round">supervisor_account</i>
-    <span class="lineThrough">Employees</span>
+    <span>Employees</span>
   </a>
 </div>
+
 <div *ngIf="currentUser.registered" class="menu-link" routerLinkActive="active">
   <a routerLink="/timelog-day" routerLinkActive="active">
     <i class="material-icons-round">schedule</i>
