--- a/src/app/core/table/table.component.sass
+++ b/src/app/core/table/table.component.sass
@@ -3,7 +3,6 @@ table
 
 
 .mat-form-field
-  // font-size: 14px
   width: 100%
 
 
@@ -12,3 +11,23 @@ mat-header-row, th.mat-header-cell
 
 .mat-elevation-z8
   box-shadow: none
+
+.image
+  display: inline-block
+  height: 25px
+  width: 25px
+  border-radius: 50%
+
+a.link-name
+  text-decoration: none
+  font-weight: 500
+  font-size: 15px
+  line-height: 22px
+  letter-spacing: 0.01em
+  color: #323C47
+
+p.text
+  font-size: 13px
+  line-height: 19px
+  letter-spacing: 0.01em
+  color: #323C47
