--- a/src/app/employees/employees.component.sass
+++ b/src/app/employees/employees.component.sass
@@ -2,6 +2,15 @@
   .employees-container__header
     display: flex
     justify-content: space-between
+    margin: 0 10px
+    .mat-button-toggle-group
+      // margin: 5px
+      height: 15px
+      font-weight: 500
+      font-size: 11px
+      text-align: center
+      letter-spacing: 0.02em
+
 
     .employees-container__mail-sender
       display: flex
@@ -13,8 +22,21 @@
       letter-spacing: 0.01em
 
 
-
-
+.button-select
+  display: flex
+  flex-direction: row
+  justify-content: space-between
+  height: 25px
+  width: 170px
+  background: #109CF1
+  box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24)
+  border-radius: 4px
+  font-weight: 500
+  font-size: 13px
+  text-align: center
+  letter-spacing: 0.02em
+  color: #FFFFFF
+  line-height: 14px
 
 
 .mat-raised-button.mat-primary
@@ -26,4 +48,8 @@
   text-align: center
   letter-spacing: 0.02em
   border-radius: 4px
+
+.mat-select
+  width: 5px
+
 
