--- a/src/app/profile-page/profile.component.html
+++ b/src/app/profile-page/profile.component.html
@@ -1,9 +1,6 @@
 <div class="profile-container">
   <app-container class="profile__info">
-    <app-profile-info
-      [user]="user"
-      [currentUser]="currentUser"
-    ></app-profile-info>
+    <app-profile-info [user]="user" [currentUser]="currentUser"></app-profile-info>
   </app-container>
 
   <!-- <app-container *ngIf="currentUser.registered" class="profile__bar-chart">
@@ -18,11 +15,11 @@
         </div>
       </div>
   </app-container> -->
+  <app-container *ngIf="currentUser.registered">
+    <app-employee-periods></app-employee-periods>
+  </app-container>
 
-  <app-container
-    *ngIf="currentUser.registered"
-    class="profile__notification-preferences"
-  >
+  <app-container *ngIf="currentUser.registered" class="profile__notification-preferences">
     <app-notification-preferences [user]="user"></app-notification-preferences>
   </app-container>
 
