--- a/src/styles.sass
+++ b/src/styles.sass
@@ -19,7 +19,13 @@
   button
     color: white
 
-.mat-form-field-appearance-legacy .mat-form-field-infix
-  padding: 0 0
+// .mat-form-field-appearance-legacy .mat-form-field-infix
+//   padding: 0 0
 
+
+// .mat-form-field
+//   margin-left: 2.5rem
+//   width: auto
+.mat-button-toggle-label-content
+  line-height: 14px !important
 
