ref: change table.

--- a/src/app/timelogs/datepicker/datepicker.component.html
+++ b/src/app/timelogs/datepicker/datepicker.component.html
@@ -1,11 +1,11 @@
 <div class="data">
-  <button mat-icon-button (click)="decrementDate()" matTooltip="Previous day">
+  <button mat-icon-button (click)="setDate()" (click)="decrementDate()" matTooltip="Previous day">
     <mat-icon>keyboard_arrow_left</mat-icon>
   </button>
   <input  [matDatepicker]="picker" (click)="picker.open()"
           [formControl]="date" readonly>
   <mat-datepicker  #picker [calendarHeaderComponent]="customHeader"></mat-datepicker>
-  <button mat-icon-button startView="year" (click)="incrementDate()" matTooltip="Next day">
+  <button mat-icon-button startView="year" (click)="setDate()" (click)="incrementDate()" matTooltip="Next day">
     <mat-icon>keyboard_arrow_right</mat-icon>
   </button>
 </div>
