--- a/src/app/timelogs/header-timelogs/header-timelogs.component.sass
+++ b/src/app/timelogs/header-timelogs/header-timelogs.component.sass
@@ -51,8 +51,12 @@
   letter-spacing: 0.01em
   color: white
   background: #109CF1
-  box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24)
   border-radius: 4px
   border: 1px solid #109CF1
   box-sizing: border-box
   padding: 1px 15px
+
+.disabled
+  border: 1px solid #6A707E
+  color: #6A707E
+  background: #F5F6F8
