--- a/src/app/timelogs/timelog-day/timelog-day.component.sass
+++ b/src/app/timelogs/timelog-day/timelog-day.component.sass
@@ -13,6 +13,21 @@
   table
     width: 100%
 
+    span
+      width: 100%
+
+    input
+      outline: none
+      width: 100%
+      border: none
+      font-family: Poppins
+      font-style: normal
+      font-weight: normal
+      font-size: 13px
+      line-height: 19px
+      letter-spacing: 0.01em
+      color: #707683
+
     mat-label
       display: flex
       align-items: center
