--- a/src/app/timelogs/timelog-day/timelog-day.component.html
+++ b/src/app/timelogs/timelog-day/timelog-day.component.html
@@ -1,75 +1,77 @@
 <div class="container">
-  <app-header-timelogs></app-header-timelogs>
+  <app-header-timelogs (changeDate)="setDate()" (setData)="setData()" [status]="saveStatus" [isDisabled]="isDisabled"></app-header-timelogs>
+  <div [formGroup]="timesheetsForm" class="table">
+    <ng-container formArrayName="timesheets">
+        <table mat-table [dataSource]="timesheetsControls.controls">
 
-  <div class="table">
-    <table mat-table [dataSource]="timesheets">
-      <ng-container matColumnDef="project">
-        <th mat-header-cell *matHeaderCellDef> Project </th>
-        <td mat-cell *matCellDef="let timesheet; let i = index">
-          <app-timelog-select [timesheets]="timesheets[i]" [projects]="projects"></app-timelog-select>
-        </td>
-        <td mat-footer-cell *matFooterCellDef> Total </td>
-      </ng-container>
+          <ng-container matColumnDef="project">
+            <th mat-header-cell *matHeaderCellDef> Project </th>
+            <td mat-cell *matCellDef="let timesheet; let i = index" [formGroup]="timesheet">
+              <mat-form-field floatLabel="never">
+                <mat-select placeholder="Choose Project" formControlName="project">
+                  <mat-option *ngFor="let project of projects" [value]="project">
+                   {{ project }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </td>
+            <td mat-footer-cell *matFooterCellDef> Total </td>
+          </ng-container>
 
-      <ng-container matColumnDef="time">
-        <th mat-header-cell *matHeaderCellDef> Time (hours) </th>
-        <td mat-cell *matCellDef="let timesheet"> {{timesheet.time}} </td>
-        <td mat-footer-cell *matFooterCellDef> {{getTotalCost()}} </td>
-      </ng-container>
+          <ng-container matColumnDef="time">
+            <th mat-header-cell *matHeaderCellDef> Time (hours) </th>
+            <td mat-cell *matCellDef="let timesheet" [formGroup]="timesheet">
+              <input placeholder="0.0" formControlName="time">
+            </td>
+            <td mat-footer-cell *matFooterCellDef> {{getTotalCost()}} </td>
+          </ng-container>
 
-      <ng-container matColumnDef="comment">
-        <th mat-header-cell *matHeaderCellDef> Comment </th>
-        <td mat-cell *matCellDef="let timesheet; let i = index"><div class="comment-field">
-          <span>{{timesheet.comment}}</span>
-          <button mat-icon-button (click)="deleteTimesheet(i)">
-            <mat-icon class="mat-18">close</mat-icon>
-          </button>
-        </div>
-        </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
+          <ng-container matColumnDef="comment">
+            <th mat-header-cell *matHeaderCellDef> Comment </th>
+            <td mat-cell *matCellDef="let timesheet; let i = index" [formGroup]="timesheet">
+              <div class="comment-field">
+                <span><input placeholder="Comment" formControlName="comment"></span>
+                <button mat-icon-button (click)="deleteTimesheetForm(i)">
+                  <mat-icon class="mat-18">close</mat-icon>
+                </button>
+              </div>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
 
-      <ng-container matColumnDef="project-description">
-        <td class="bottom-border-none" [formGroup]="timesheetForm" mat-footer-cell *matFooterCellDef>
-          <mat-form-field [floatLabel]="'never'">
-            <mat-label>
-              <div class="round"></div>&nbsp;&nbsp;<span>Choose Project</span>
-            </mat-label>
-            <mat-select formControlName="project" [(value)]="project">
-              <mat-select-trigger *ngIf="project" class="mark">
-                <mat-icon class="md-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
-                <span>{{project.name}}</span>
-              </mat-select-trigger>
-              <mat-option *ngFor="let project of projects" [value]="project">
-                <mat-icon class="md-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
-                <span>{{project.name}}</span>
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </td>
-      </ng-container>
+          <ng-container matColumnDef="project-description">
+            <td class="bottom-border-none" [formGroup]="timesheetForm" mat-footer-cell *matFooterCellDef>
+              <mat-form-field [floatLabel]="'never'">
+                <mat-select placeholder="Choose Project"  formControlName="project">
+                  <mat-option *ngFor="let project of projects" [value]="project">
+                   {{project}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </td>
+          </ng-container>
 
-      <ng-container matColumnDef="time-description">
-        <td class="bottom-border-none" [formGroup]="timesheetForm" mat-footer-cell *matFooterCellDef>
-          <input formControlName="time" matInput placeholder="0.0">
-        </td>
-      </ng-container>
+          <ng-container matColumnDef="time-description">
+            <td class="bottom-border-none" [formGroup]="timesheetForm" mat-footer-cell *matFooterCellDef>
+              <input formControlName="time" matInput placeholder="0.0">
+            </td>
+          </ng-container>
 
-      <ng-container matColumnDef="comment-description">
-        <td class="bottom-border-none" [formGroup]="timesheetForm" mat-footer-cell *matFooterCellDef>
-          <input formControlName="comment" matInput placeholder="Comment">
-        </td>
-      </ng-container>
+          <ng-container matColumnDef="comment-description">
+            <td class="bottom-border-none" [formGroup]="timesheetForm" mat-footer-cell *matFooterCellDef>
+              <input formControlName="comment" matInput placeholder="Comment">
+            </td>
+          </ng-container>
 
-      <tr mat-header-row class="height" *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      <tr [ngStyle]="{'font-weight': 'normal', 'color': '#707683'}"
-          mat-footer-row *matFooterRowDef="['project-description', 'time-description', 'comment-description']">
-      </tr>
-      <tr mat-footer-row *matFooterRowDef="displayedColumns;"></tr>
-    </table>
+          <tr mat-header-row class="height" *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr [ngStyle]="{'font-weight': 'normal', 'color': '#707683'}"
+              mat-footer-row *matFooterRowDef="['project-description', 'time-description', 'comment-description']">
+          </tr>
+          <tr mat-footer-row *matFooterRowDef="displayedColumns;"></tr>
+
+        </table>
+    </ng-container>
   </div>
-  <button (click)="test()">Save</button>
+
 </div>
-
-
