feat: add edit page

--- a/src/app/projects/projects-header/projects-header.component.html
+++ b/src/app/projects/projects-header/projects-header.component.html
@@ -1,7 +1,10 @@
 <div class="projects-list__header">
   <div class="buttons">
-    <button>Active</button>
-    <button>Archived</button>
+    <button (click)="onChangeStatus('in progress')">Active</button>
+    <button (click)="onChangeStatus('archived')">Archived</button>
   </div>
-  <button mat-raised-button class="create-button" color="primary" routerLink="project">Create</button>
+  <button mat-raised-button
+  class="create-button"
+  color="primary"
+  routerLink="project">Create</button>
 </div>
