--- a/src/app/projects/projects-team/projects-team.component.sass
+++ b/src/app/projects/projects-team/projects-team.component.sass
@@ -8,7 +8,8 @@
   .row, .row-default, .row-total
     display: flex
     flex-flow: row
-    justify-content: space-between
+    justify-content: space-around
+    width: 100%
     .role-column-hide, .delete-column-hide, .delete-column-default
       visibility: hidden
       .total-1
