--- a/src/app/projects/projects-list/projects-list.component.html
+++ b/src/app/projects/projects-list/projects-list.component.html
@@ -1,20 +1,22 @@
+<app-projects-header (onSaved)="onSaved($event)"></app-projects-header>
 <div class="projects-list">
-  <mat-card>
-    <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-    </mat-form-field>
-    <div class="mat-elevation-z8">
-      <mat-table [dataSource]="dataSource" matSort>
+    <div class="mat-elevation-z8 list">
+      <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search for a project">
+      </mat-form-field>
+      <table mat-table [dataSource]="dataSource" matSort>
         <ng-container matColumnDef="color">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
-          <td mat-cell *matCellDef="let element" [style.color]="element.color"> {{element.color}} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+          <td mat-cell *matCellDef="let element"><div [style.background-color]="element.color" class="circle"></div></td>
         </ng-container>
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          <td mat-cell
+          *matCellDef="let element"
+          [routerLink]="['/projects/edit', element.name]">{{element.name}} </td>
         </ng-container>
         <ng-container matColumnDef="code">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
           <td mat-cell *matCellDef="let element"> {{element.code}} </td>
         </ng-container>
         <ng-container matColumnDef="team">
@@ -23,27 +25,33 @@
         </ng-container>
         <ng-container matColumnDef="start">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.startDate | date}} </td>
         </ng-container>
         <ng-container matColumnDef="progress">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-          <td mat-cell *matCellDef="let element"> {{element.progress}}% </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+          <td mat-cell *matCellDef="let element"></td>
         </ng-container>
         <ng-container matColumnDef="end">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.endDate | date}} </td>
         </ng-container>
         <ng-container matColumnDef="play">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Play </th>
-          <td mat-cell *matCellDef="let element"> {{element}} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+          <td mat-cell *matCellDef="let element">
+            <i *ngIf="(element.status==='in progress')" class="material-icons" (click)="changeStatus(element, 'paused')">pause</i>
+            <i *ngIf="(element.status==='paused' || element.status==='archived')" class="material-icons arrow" (click)="changeStatus(element,'in progress')">play_arrow</i>
+          </td>
         </ng-container>
         <ng-container matColumnDef="stop">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Stop </th>
-          <td mat-cell *matCellDef="let element"> {{element}} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+          <td mat-cell *matCellDef="let element">
+            <i *ngIf="(element.status==='paused' || element.status==='in progress')" (click)="changeStatus(element, 'archived')" class="material-icons">stop</i>
+            <i *ngIf="(element.status==='archived')" (click)="changeStatus(element, 'in progress')" class="material-icons">pause</i>
+          </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </mat-table>
+      </table>
     </div>
-  </mat-card>
+
 </div>
