--- a/src/app/projects/projects-list/projects-list.component.html
+++ b/src/app/projects/projects-list/projects-list.component.html
@@ -21,7 +21,7 @@
         </ng-container>
         <ng-container matColumnDef="team">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Team </th>
-          <td mat-cell *matCellDef="let element"> {{element.team}} </td>
+          <td mat-cell *matCellDef="let element"></td>
         </ng-container>
         <ng-container matColumnDef="start">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
