--- a/src/app/projects/projects-list/projects-list.component.html
+++ b/src/app/projects/projects-list/projects-list.component.html
@@ -1,4 +1,4 @@
-<app-projects-header (onSaved)="onSaved($event)"></app-projects-header>
+<app-projects-header (onSaved)="onSaved($event)" [currentUser]="currentUser"></app-projects-header>
 <div class="projects-list">
     <div class="mat-elevation-z8 list">
       <mat-form-field>
@@ -12,8 +12,7 @@
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
           <td mat-cell
-          *matCellDef="let element"
-          [routerLink]="['/projects/edit', element.name]">{{element.name}} </td>
+          *matCellDef="let element">{{element.name}} </td>
         </ng-container>
         <ng-container matColumnDef="code">
           <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
