fix: bind mistakes

--- a/src/app/projects/projects-header/projects-header.component.html
+++ b/src/app/projects/projects-header/projects-header.component.html
@@ -6,7 +6,6 @@
   <button mat-raised-button
   class="create-button"
   color="primary"
-  routerLink="project"
-  *ngIf="currentUser.role === 'Owner'">
+  routerLink="project">
   Create</button>
 </div>
